# motion_capture_real_time

./: README.md
src/vrpn_gravity_projection/: CMakeLists.txt  README.md  build_vrpn_test.sh  package.xml  test.cpp
src/vrpn_gravity_projection/launch/: reset_four_element.launch  twist_transform.launch  vrpn_gravity_projection.launch
src/vrpn_gravity_projection/src/: accel_echo.cpp  reset_four_element.cpp  twist_echo.cpp  twist_echo.py  twist_publisher_test.cpp  twist_transform.cpp  velocity_publisher.cpp  vrpn_gravity_projection.cpp
src/vrpn_gravity_projection/test/: test_vrpn_gravity.cpp
