<?xml version="1.0"?>
<package format="2">
  <name>vrpn_gravity_projection</name>
  <version>1.0.0</version>
  <description>
    ROS节点用于从VRPN位姿数据计算重力投影向量，
    与MuJoCo仿真保持一致，用于真机部署时的观测对齐。
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
